--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -53,8 +53,8 @@ $theme-colors: map-merge((
 // import their vars after customization for use below
 $enable-flex: true; // fully adopt flexbox layouts
 $enable-shadows: true; // enable shadows, set to false to turn off shadows
-@import "~bootstrap/scss/functions"; // from bootstrap node_module
-@import "~bootstrap/scss/variables"; // from bootstrap node_module
+@import "bootstrap/scss/functions"; // from bootstrap node_module
+@import "bootstrap/scss/variables"; // from bootstrap node_module
 
 //
 @import "variables/layout";
